--- a/index.html
+++ b/index.html
@@ -26,7 +26,23 @@
           </div>
         </div>
       </header>
-
+      <section>
+        <div class="container">
+          <div class="actionPart">
+            <div class="actionTitle">
+              <h6>See It in Action</h6>
+              <p>
+                Explore the live preview and imagine your brand in this bold new
+                look.
+              </p>
+              <button>Launch Live Preview</button>
+            </div>
+            <div class="actionImg">
+              <img src="Images/wc-mini.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
