added productive user

--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="container">
+          <div class="productiveUser">
+            <h6>Joined Thousands of Productive Users</h6>
+            <div class="counterPart">
+              <div>
+                <h2>50K</h2>
+                <p>Active User</p>
+              </div>
+              <div>
+                <h2>2M+</h2>
+                <p>Focus Sessions</p>
+              </div>
+              <div>
+                <h2>95%</h2>
+                <p>Satisfaction Rate</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
