--- a/index.html
+++ b/index.html
@@ -64,6 +64,84 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="container">
+          <div class="feedbackPart">
+            <h3>What our users say</h3>
+            <div class="flexPart">
+              <div class="titlePart">
+                <div class="icons">
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                </div>
+                <div class="iconsTitle">
+                  <h6>Loved by Designers</h6>
+                  <p>
+                    This template instantly leveled up our presence.” – Studio
+                    Vertex
+                  </p>
+                </div>
+                <div class="reviewer">
+                  <img src="Images/avatar.png" alt="" />
+                  <div class="reviNam">
+                    <strong>Reviewer name</strong>
+                    <p>Date</p>
+                  </div>
+                </div>
+              </div>
+              <div class="titlePart">
+                <div class="icons">
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                </div>
+                <div class="iconsTitle">
+                  <h6>Loved by Designers</h6>
+                  <p>
+                    This template instantly leveled up our presence.” – Studio
+                    Vertex
+                  </p>
+                </div>
+                <div class="reviewer">
+                  <img src="Images/avatar.png" alt="" />
+                  <div class="reviNam">
+                    <strong>Reviewer name</strong>
+                    <p>Date</p>
+                  </div>
+                </div>
+              </div>
+              <div class="titlePart">
+                <div class="icons">
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                  <img src="Images/icon-star.png" alt="" />
+                </div>
+                <div class="iconsTitle">
+                  <h6>Loved by Designers</h6>
+                  <p>
+                    This template instantly leveled up our presence.” – Studio
+                    Vertex
+                  </p>
+                </div>
+                <div class="reviewer">
+                  <img src="Images/avatar.png" alt="" />
+                  <div class="reviNam">
+                    <strong>Reviewer name</strong>
+                    <p>Date</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
