--- a/index.html
+++ b/index.html
@@ -142,6 +142,17 @@
           </div>
         </div>
       </section>
+            <section>
+ <div class="container">
+         <div class="focusPart">
+          <h4>Ready to focus better</h4>
+          <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+          <button>Ger Started Free</button>
+          <img src="Images/wc-big.png" alt="">
+        </div>
+ </div>
+      </section>
+
     </main>
   </body>
 </html>
