--- a/index.html
+++ b/index.html
@@ -152,7 +152,30 @@
         </div>
  </div>
       </section>
+<section>
+        <section>
+        <div class="container">
+          <div class="formPart">
+            <h2>Let’s Get in Touch</h2>
+            <div class="form">
 
+                <label>Email</label>
+              <input type="email" name="email" id="email" placeholder="example@email.com" required>
+
+
+                <label>Name</label>
+              <input type="name" name="name" id="name" placeholder="full name" required>
+
+
+                <label>Message</label>
+              <textarea name="textarea" id="textarea" rows="4" cols="66" placeholder="write your message..."></textarea>
+
+<button>Get in Touch</button>
+          </div>
+        </div>
+      </section>
+
+</section>
     </main>
   </body>
 </html>
