--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
  </div>
       </section>
-<section>
+
         <section>
         <div class="container">
           <div class="formPart">
@@ -174,8 +174,26 @@
           </div>
         </div>
       </section>
+      <section>
 
-</section>
+          <div class="footerPart">
+            <div class="container"></div>
+          <b>LOGO</b>
+          <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+                  <div class="flexFooter">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">How it Works</a></li>
+            <li><a href="#">Service</a></li>
+
+          </ul>
+        </div>
+        </div>
+        </div>
+
+
+      </section>
     </main>
   </body>
 </html>
